--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:theme="@style/Theme.LADO"
         tools:targetApi="31">
 
-        <!-- 🏁 Page principale au démarrage -->
+        <!-- 🏁 Launch Activity -->
         <activity
             android:name=".Views.MainActivity"
             android:exported="true"
@@ -25,53 +25,67 @@
             </intent-filter>
         </activity>
 
-        <!-- 🔐 Page Login -->
+        <!-- 🔐 Login Page -->
         <activity
             android:name=".Views.LoginActivity"
             android:exported="false"
             android:label="Login"
             android:theme="@style/Theme.LADO" />
 
-        <!-- 🏠 Page Home -->
-        <activity
-            android:name=".Views.HomeActivity"
-            android:exported="false"
-            android:label="Home"
-            android:theme="@style/Theme.LADO" />
-
-        <!-- 🧾 Page Sign In -->
+        <!-- 🧾 Sign In Page -->
         <activity
             android:name=".Views.SignInActivity"
             android:exported="false"
             android:label="Sign In"
             android:theme="@style/Theme.LADO" />
 
-        <!-- 🎥 Page Livestream -->
+        <!-- 🏠 Home Page -->
+        <activity
+            android:name=".Views.HomeActivity"
+            android:exported="false"
+            android:label="Home"
+            android:theme="@style/Theme.LADO" />
+
+        <!-- 🎥 Livestream Page -->
         <activity
             android:name=".Views.LivestreamActivity"
             android:exported="false"
             android:label="Livestream"
             android:theme="@style/Theme.LADO" />
 
-        <!-- 📊 Page Statics -->
+        <!-- 📊 Statistics Page -->
         <activity
             android:name=".Views.StaticsActivity"
             android:exported="false"
             android:label="Statistics"
             android:theme="@style/Theme.LADO" />
 
-        <!-- 🔔 Page Notifications -->
+        <!-- 🔔 Notifications Page -->
         <activity
             android:name=".Views.NotificationsActivity"
             android:exported="false"
             android:label="Notifications"
             android:theme="@style/Theme.LADO" />
 
-        <!-- 👤 Page Profile -->
+        <!-- 👤 Profile Page -->
         <activity
             android:name=".Views.ProfileActivity"
             android:exported="false"
             android:label="Profile"
+            android:theme="@style/Theme.LADO" />
+
+        <!-- ✅ Verify User Page (for Forgot Password) -->
+        <activity
+            android:name=".Views.VerifyUserActivity"
+            android:exported="false"
+            android:label="Verify User"
+            android:theme="@style/Theme.LADO" />
+
+        <!-- ✅ Reset Password Page -->
+        <activity
+            android:name=".Views.ResetPasswordActivity"
+            android:exported="false"
+            android:label="Reset Password"
             android:theme="@style/Theme.LADO" />
 
     </application>
